[package]
name = "bevy_cells"
version = "0.1.0"
edition = "2021"
authors = ["James Bell <jamescarterbell@gmail.com>"]
license = "MIT"
license-file = "LICENSE-MIT"
description = "Bevy library for working with entities in grids."
repository = "https://github.com/OxidizedGames/bevy_cells"
homepage = "https://github.com/OxidizedGames/bevy_cells"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
aery = "0.5.1"
bevy = {version = "0.12", default-features = false}
bimap = "0.6.3"

[dev-dependencies]
rstest = "0.18.2"
bevy = {version = "0.12", default-features = true}

[lints.clippy]
all = "deny"